# crisp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  aggregate.py  calibrate.py  cawr_audit.py  diagnose_finisher.py  metrics.py  redetect.py  runner.py  slurm_gen.py  systems.py
crisp/: __init__.py  archive.py  bias.py  calculator.py  cawr.py  fingerprint.py  flow.py  gp_calculator.py  hpc.py  matching.py  projector.py  projector_peratom.py  search.py  surrogate.py  targets.py
crisp/finishers/: __init__.py  fp_target.py  gp_guided.py
docs/: dependencies.md  public-release.md
examples/: hpc_search_template.py
tests/: test_cawr.py  test_finisher_instrumentation.py  test_gp_autotune.py  test_gradients.py  test_harness.py  test_public_core.py  test_sanity_guard.py  test_swap_mutation.py
