[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp-csp"
version = "0.4.0"
description = "Fingerprint-space surrogate tooling for crystal structure prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "The CRISP contributors" }
]
keywords = ["crystal-structure-prediction", "materials-science", "ase"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "ase>=3.22",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "torch>=2.0"
]

[project.optional-dependencies]
search = [
  "pyxtal>=0.6"
]
dev = [
  "pytest>=7"
]

[tool.setuptools]
packages = ["crisp", "crisp.finishers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
